; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_ff.c_put_utf.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_ff.c_put_utf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CODEPAGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**, i32)* @put_utf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @put_utf(i32 %0, i8** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i8** %1, i8*** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @CODEPAGE, align 4
  %11 = call i64 @ff_uni2oem(i32 %9, i32 %10)
  store i64 %11, i64* %8, align 8
  %12 = load i64, i64* %8, align 8
  %13 = icmp sge i64 %12, 256
  br i1 %13, label %14, label %30

14:                                               ; preds = %3
  %15 = load i32, i32* %7, align 4
  %16 = icmp slt i32 %15, 2
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  store i32 0, i32* %4, align 4
  br label %42

18:                                               ; preds = %14
  %19 = load i64, i64* %8, align 8
  %20 = ashr i64 %19, 8
  %21 = trunc i64 %20 to i8
  %22 = sext i8 %21 to i64
  %23 = inttoptr i64 %22 to i8*
  %24 = load i8**, i8*** %6, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i32 1
  store i8** %25, i8*** %6, align 8
  store i8* %23, i8** %24, align 8
  %26 = load i64, i64* %8, align 8
  %27 = inttoptr i64 %26 to i8*
  %28 = load i8**, i8*** %6, align 8
  %29 = getelementptr inbounds i8*, i8** %28, i32 1
  store i8** %29, i8*** %6, align 8
  store i8* %27, i8** %28, align 8
  store i32 2, i32* %4, align 4
  br label %42

30:                                               ; preds = %3
  %31 = load i64, i64* %8, align 8
  %32 = icmp eq i64 %31, 0
  br i1 %32, label %36, label %33

33:                                               ; preds = %30
  %34 = load i32, i32* %7, align 4
  %35 = icmp slt i32 %34, 1
  br i1 %35, label %36, label %37

36:                                               ; preds = %33, %30
  store i32 0, i32* %4, align 4
  br label %42

37:                                               ; preds = %33
  %38 = load i64, i64* %8, align 8
  %39 = inttoptr i64 %38 to i8*
  %40 = load i8**, i8*** %6, align 8
  %41 = getelementptr inbounds i8*, i8** %40, i32 1
  store i8** %41, i8*** %6, align 8
  store i8* %39, i8** %40, align 8
  store i32 1, i32* %4, align 4
  br label %42

42:                                               ; preds = %37, %36, %18, %17
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i64 @ff_uni2oem(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
